feat: name refactor and parallel working in analysis
