# web-api/api-stock-market/src/app/StockMarket.Infrastructure/Interfaces/IExternalStocksRepository.go
@@ -1,8 +1,10 @@
 package Interface
 
-import "api-stock-market/src/app/StockMarket.Infrastructure/Repository/Response"
+import (
+	"api-stock-market/src/app/StockMarket.Infrastructure/Repository/Http/Response"
+)
 
-type IExternalStocksRepository interface {
+type IFmpStocksRepository interface {
 	GetRealtimeData(ticker string) (realTimeData Response.RealTimeDataResponse, err error)
 	GetHistoricalFullPrice(ticker string) (Response.HistoricalFullPriceResponse, error)
 	GetKeyMetrics(ticker string) (metrics Response.MetricsResponse, err error)
